library code refactored using classes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
       </thead>
       <tbody id="datatable"></tbody>
     </table>
-    <script src="library.js"></script>
+    <script src="classLibrary.js"></script>
   </body>
 </html>
